--- a/Source/CriticalPath.Data/Resources/CommonStrings.tr.resx
+++ b/Source/CriticalPath.Data/Resources/CommonStrings.tr.resx
@@ -59,6 +59,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
 
+	<data name="Admin" xml:space="preserve">
+		<value>Admin</value>
+	</data>
+
 	<data name="Home" xml:space="preserve">
 		<value>Ana Sayfa</value>
 	</data>
