App creates process records from template

--- a/Source/CriticalPath.Data/Resources/ActionStrings.resx
+++ b/Source/CriticalPath.Data/Resources/ActionStrings.resx
@@ -139,6 +139,10 @@
 		<value>Register</value>
 	</data>
 
+	<data name="Remove" xml:space="preserve">
+		<value>Remove</value>
+	</data>
+
 	<data name="Save" xml:space="preserve">
 		<value>Save</value>
 	</data>
