--- a/Source/CriticalPath.Data/Resources/ActionStrings.tr.resx
+++ b/Source/CriticalPath.Data/Resources/ActionStrings.tr.resx
@@ -139,6 +139,10 @@
 		<value>Kayıt ol</value>
 	</data>
 
+	<data name="Remove" xml:space="preserve">
+		<value>Çıkar</value>
+	</data>
+
 	<data name="Save" xml:space="preserve">
 		<value>Kaydet</value>
 	</data>
