--- a/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
+++ b/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
@@ -180,7 +180,7 @@
 	</data>
 
 	<data name="CategoryId" xml:space="preserve">
-		<value>Kategori No</value>
+		<value>Kategori</value>
 	</data>
 
 	<data name="City" xml:space="preserve">
@@ -204,7 +204,7 @@
 	</data>
 
 	<data name="CompanyId" xml:space="preserve">
-		<value>Şirket No</value>
+		<value>Şirket</value>
 	</data>
 
 	<data name="CompanyName" xml:space="preserve">
@@ -296,7 +296,7 @@
 	</data>
 
 	<data name="CustomerId" xml:space="preserve">
-		<value>Müşteri No</value>
+		<value>Müşteri</value>
 	</data>
 
 	<data name="Customers" xml:space="preserve">
@@ -500,7 +500,7 @@
 	</data>
 
 	<data name="ParentCategoryId" xml:space="preserve">
-		<value>Üst Kategori No</value>
+		<value>Üst Kategori</value>
 	</data>
 
 	<data name="Phone1" xml:space="preserve">
@@ -600,7 +600,7 @@
 	</data>
 
 	<data name="ProductId" xml:space="preserve">
-		<value>Ürün No</value>
+		<value>Ürün</value>
 	</data>
 
 	<data name="Products" xml:space="preserve">
@@ -616,7 +616,7 @@
 	</data>
 
 	<data name="PurchaseOrderId" xml:space="preserve">
-		<value>Sipariş No</value>
+		<value>Sipariş</value>
 	</data>
 
 	<data name="PurchaseOrders" xml:space="preserve">
